2017-03-05	"An unbreakable toy is useful for breaking other toys."  (6)

		share/innocent-pear/doge-i.h :
		- inhibit optimization of irel_sane(.)

2017-03-04	More pointer messiness.  (2)

		include/innocent-pear/kthxbai.h :
		- kthxbai<, S *, ...> now casts sizeof(S) to intptr_t --
		  which is signed -- before multiplying or dividing by it

		share/innocent-pear/doge-02.cc ,
		share/innocent-pear/doge-03.cc ,
		share/innocent-pear/doge-04.cc ,
		share/innocent-pear/doge-05.cc :
		- added chaff

		share/innocent-pear/doge-06.cc ,
		share/innocent-pear/doge-07.cc :
		- take advantage of interface changes to orly<...> and
		  kthxbai<...> to scramble pointers

2017-03-03	More pointer messiness.

		include/innocent-pear/kthxbai.h :
		- can now subtract two scrambled pointers (kthxbai<...>::
		  operator-(.)) with displacement differences optimized away
		  at compile time
		- kthxbai<...>::operator++(.) and kthxbai<...>::operator--
		  ([.]) are now always inline
		- added kthxbai<, const void *, ...>, for completeness
		- now uses intptr_t instead of ptrdiff_t for differences
		  between pointers

		include/innocent-pear/lolwut.h :
		- added lolwut<...>::diff_in_chars(.) and lolwut<...>::
		  operator+(), mainly to support kthxbai<...>::operator-(.)
		- lolwut<..., 0u> now also sends displacement to kthxbai<...>
		  to hinder optimizations
		- now uses intptr_t instead of ptrdiff_t for differences
		  between pointers

		share/innocent-pear/doge-01.cc :
		- now uses intptr_t instead of ptrdiff_t for differences
		  between pointers
		- now avoids dereferencing scrambled pointers too much

		share/innocent-pear/doge-i.h :
		- upped scrambling of relocation types

		configure ,
		GNUmakefile :
		- test for std::intptr_t or ::intptr_t

2017-03-02	"An unbreakable toy is useful for breaking other toys."  (5)

		share/innocent-pear/doge-01.cc :
		- tweaked pointer scrambling to allow more operations

		share/innocent-pear/doge-02.cc ,
		share/innocent-pear/doge-03.cc :